# android-16

system/authgraph/core/: Android.bp  Cargo.toml  TEST_MAPPING
system/authgraph/core/src/: arc.rs  error.rs  key.rs  keyexchange.rs  lib.rs  ta.rs  traits.rs
system/authgraph/core/testdata/: bcc
system/authgraph/core/tests/: lib.rs
system/authgraph/derive/: Android.bp  Cargo.toml
system/authgraph/derive/src/: lib.rs
system/authgraph/wire/: Android.bp  Cargo.toml  TEST_MAPPING
system/authgraph/wire/src/: cbor.rs  fragmentation.rs  lib.rs  tests.rs
system/chre/: .gitignore  Android.bp  CMakeLists.txt  Makefile  OWNERS  PREUPLOAD.cfg  chre_daemon.rc  chre_flags.aconfig  run_pal_impl_tests.sh  run_sim.sh  run_tests.sh
system/chre/api_parser/: .gitignore  api_parser.py  chpp_code_generator.py  chre_api_annotations.json  chre_api_to_chpp.py  requirements.txt  utils.py
system/chre/apps/audio_stress_test/: Makefile  audio_stress_test.cc
system/chre/apps/audio_world/: Makefile  audio_world.cc
system/chre/apps/ble_world/: Makefile  ble_world.cc
system/chre/apps/debug_dump_world/: Makefile  debug_dump_world.cc
system/chre/apps/gnss_world/: Makefile  gnss_world.cc
system/chre/apps/hello_world/: Makefile  hello_world.cc
system/chre/apps/host_awake_world/: Makefile  host_awake_world.cc
system/chre/apps/message_world/: Makefile  message_world.cc
system/chre/apps/rpc_world/: Makefile  rpc_world.mk
system/chre/apps/sensor_test/: Makefile  sensor_test.cc  sensor_test.mk
system/chre/apps/sensor_world/: Makefile  sensor_world.cc
system/chre/apps/tflm_demo/: Makefile
system/chre/apps/timer_world/: Makefile  timer_world.cc
system/chre/apps/unload_tester/: unload_tester.cc
system/chre/apps/wifi_offload/: Android.bp
system/chre/apps/wifi_world/: Makefile  wifi_world.cc
system/chre/apps/wwan_world/: Makefile  wwan_world.cc
system/chre/chpp/: Android.bp  QUICKSTART.md  README.md  RELEASE_NOTES.md  app.c  clients.c  services.c  transport.c
system/chre/chpp/clients/: discovery.c  gnss.c  loopback.c  timesync.c  wifi.c  wwan.c
system/chre/chpp/common/: wifi_utils.c
system/chre/chpp/services/: discovery.c  gnss.c  loopback.c  timesync.c  wifi.c  wwan.c
system/chre/chpp/test/: app_discovery_test.cpp  app_notification_test.cpp  app_req_resp_test.cpp  app_test.cpp  app_test_base.cpp  app_test_base.h  app_timeout_test.cpp  app_timeout_test.h  fake_link.cpp  fake_link.h  fake_link_client.cpp  fake_link_client.h  fake_link_sync_test.cpp  gnss_test.cpp  packet_util.cpp  packet_util.h  transport_test.cpp  transport_test.h  transport_util.cpp  transport_util.h
system/chre/chre_api/: CMakeLists.txt  archive_chre_api.sh  backend.cmake  chre_api_version.mk
system/chre/core/: CMakeLists.txt  audio_request_manager.cc  ble_request.cc  ble_request_manager.cc  ble_request_multiplexer.cc  chre_message_hub_manager.cc  chre_metrics.proto  chre_metrics_with_atom.proto  core.mk  debug_dump_manager.cc  event_loop.cc  event_loop_manager.cc  gnss_manager.cc  host_comms_manager.cc  host_endpoint_manager.cc  host_message_hub_manager.cc  nanoapp.cc  sensor_request_manager.cc  sensor_type_helpers.cc  settings.cc  system_health_monitor.cc  telemetry_manager.cc  timer_pool.cc  wifi_request_manager.cc  wwan_request_manager.cc
system/chre/core/tests/: ble_request_manager_test.cc  ble_request_test.cc  memory_manager_test.cc
system/chre/doc/: nanoapp_developer_guide.md  porting_guide.md  vendor_extensions.md
system/chre/host/common/: bt_snoop_log_parser.cc  chre_aidl_hal_client.cc  config_util.cc  daemon_base.cc  fbs_daemon_base.cc  file_stream.cc  fragmented_load_transaction.cc  hal_client.cc  host_protocol_host.cc  log.cc  log_message_parser.cc  metrics_reporter.cc  preloaded_nanoapp_loader.cc  socket_client.cc  socket_server.cc  st_hal_lpma_handler.cc  time_syncer.cc  wifi_ext_hal_handler.cc
system/chre/host/exynos/: chre_daemon_exynos.rc  exynos_daemon.cc  exynos_daemon.h  main.cc
system/chre/host/hal_generic/: Android.bp
system/chre/pal/: CMakeLists.txt  backend.cmake  pal.mk
system/chre/pal/include/: OWNERS
system/chre/pal/util/: wifi_scan_cache.c
system/chre/platform/: CMakeLists.txt  backend.cmake  platform.mk
system/chre/platform/arm/: CMakeLists.txt  nanoapp_loader.cc
system/chre/platform/embos/: README.md  context.cc  init.cc  memory.cc  memory_manager.cc  system_timer.cc
system/chre/platform/exynos/: chre_api_re.cc  host_link.cc  memory.cc  platform_cache_management.cc  platform_nanoapp.cc  platform_pal.cc  system_time.cc
system/chre/platform/freertos/: CMakeLists.txt  init.cc  platform_nanoapp.cc
system/chre/platform/linux/: chre_api_re.cc  host_link.cc  init.cc  memory.cc  pal_audio.cc  pal_ble.cc  pal_gnss.cc  pal_sensor.cc  pal_wifi.cc  pal_wwan.cc  platform_log.cc  platform_nanoapp.cc  system_time.cc  system_timer.cc
system/chre/platform/riscv/: nanoapp_loader.cc
system/chre/platform/shared/: CMakeLists.txt  backend.cmake  chre_api_audio.cc  chre_api_ble.cc  chre_api_core.cc  chre_api_gnss.cc  (+29 more)
system/chre/std_overrides/: README.md  stdlib_wrapper.cc
system/chre/tools/: common.sh  find_improper_target_platform_files.py  get_padded_memsize.sh  tinysys_nanoapp_signer.py  todo_checker.py
system/chre/util/: CMakeLists.txt  container_support.cc  duplicate_message_detector.cc  hash.cc  intrusive_list_base.cc  util.mk
system/chre/variant/: CMakeLists.txt
system/keymint/boringssl/: Android.bp  Cargo.toml  TEST_MAPPING
system/keymint/common/: Android.bp  Cargo.toml  TEST_MAPPING  generated.cddl
system/keymint/derive/: Android.bp  Cargo.toml
system/keymint/ta/: Android.bp  Cargo.toml
system/keymint/tests/: Android.bp  Cargo.toml
system/keymint/wire/: Android.bp  Cargo.toml
system/secretkeeper/: Android.bp  Cargo.toml  OWNERS  README.md  TEST_MAPPING
system/secretkeeper/client/: Android.bp
system/secretkeeper/comm/: Android.bp  Cargo.toml  InternalHalTaMessages.cddl
system/secretkeeper/core/: Android.bp  Cargo.toml
system/secretkeeper/dice_policy/: Android.bp  Cargo.toml  README.md
system/secretkeeper/hal/: Android.bp
(+5654 files in other folders)
