# Note that Cargo is not an officially supported build tool (Android's Soong is the official
# tool).  This Cargo.toml file is included purely for the convenience of developers.

[package]
name = "authgraph_core"
version = "0.1.0"
authors = ["Hasini Gunasinghe <hasinitg@google.com>", "David Drysdale <drysdale@google.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
authgraph_wire = "*"
ciborium = { version = "0.2.2", default-features = false }
ciborium-io = "0.2.2"
coset = "0.3.3"
log = "0.4"
zeroize = { version = "^1.5.6", features = ["alloc", "zeroize_derive"] }

[dev-dependencies]
hex = "0.4.3"
