# Note that Cargo is not an officially supported build tool (Android's Soong is the official
# tool).  This Cargo.toml file is included purely for the convenience of developers.

[package]
name = "authgraph_derive"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.36"
syn = { version = "2.0.38", features = ["derive", "parsing"] }
