# Note that Cargo is not an officially supported build tool (Android's Soong is the official
# tool).  This Cargo.toml file is included purely for the convenience of developers.

[package]
name = "authgraph_wire"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
authgraph_derive = "*"
ciborium = { version = "0.2.2", default-features = false }
ciborium-io = "0.2.2"
enumn = "0.1.8"

[dev-dependencies]
hex = "0.4.3"
