# Note that Cargo is not an officially supported build tool (Android's Soong is the official
# tool).  This Cargo.toml file is included purely for the convenience of KeyMint developers.

[package]
name = "kmr-common"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
cddl-cat = { version = "^0.6.1", optional = true }
ciborium = { version = "^0.2.0", default-features = false }
ciborium-io = "^0.2.0"
coset = "0.3.3"
der = { version = "^0.7.2", features = ["alloc", "derive"] }
enumn = "0.1.4"
kmr-derive = "*"
kmr-wire = "*"
log = "^0.4"
pkcs1 = { version = "^0.7.5", features = ["alloc"] }
pkcs8 = "^0.10.2"
sec1 = { version = "0.7.3", features = ["alloc", "der", "pkcs8"] }
spki = { version = "0.7.3"}
zeroize = { version = "^1.5.6", features = ["alloc", "zeroize_derive"] }

[dev-dependencies]
hex = "0.4.3"
