# Note that Cargo is not an officially supported build tool (Android's Soong is the official
# tool).  This Cargo.toml file is included purely for the convenience of KeyMint developers.

[package]
name = "kmr-derive"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
syn = { version = "2.0.38", features = ["derive", "parsing"] }

[dev-dependencies]
ciborium = { version = "^0.2.0", default-features = false }
ciborium-io = "^0.2.0"
kmr-wire = "*"
