# Note that Cargo is not an officially supported build tool (Android's Soong is the official
# tool).  This Cargo.toml file is included purely for the convenience of developers.

[package]
name = "secretkeeper_comm"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>", "Shikha Panwar <shikhapanwar@google.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
ciborium = { version = "0.2.2", default-features = false }
coset = "0.3.7"
enumn = "0.1.8"
zeroize = { version = "^1.5.6", features = ["alloc", "zeroize_derive"] }
