# Note that Cargo is not an officially supported build tool (Android's Soong is the official
# tool).  This Cargo.toml file is included purely for the convenience of developers.

[package]
name = "secretkeeper_core"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>", "Shikha Panwar <shikhapanwar@google.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
authgraph_core = "*"
authgraph_wire = "*"
ciborium = { version = "0.2.2", default-features = false }
coset = "0.3.7"
dice_policy = "*"
log = "0.4"
secretkeeper_comm = "*"

[dev-dependencies]
hex = "0.4.3"
