# Note that Cargo is not an officially supported build tool (Android's Soong is the official
# tool).  This Cargo.toml file is included purely for the convenience of developers.

[package]
name = "dice_policy"
version = "0.1.0"
authors = ["Shikha Panwar <shikhapanwar@google.com>", "David Drysdale <drysdale@google.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
ciborium = { version = "0.2.2", default-features = false }
coset = "0.3.7"
